--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
             <h1 class="header-title">Anjana Sankar</h1>
             <div class="subtitle">Technology Enthusiast & Developer</div>
             <div class="contact-info">
-                <p>anjanasankar50@gmail.com | +91 8943350868</p>
+                <p>anjanasankar50@gmail.com </p>
             </div>
         </div>
     </header>
