--- a/index.html
+++ b/index.html
@@ -433,7 +433,9 @@
 
         <div class="container header-content">
             <h1 class="header-title">Anjana Sankar</h1>
-            <div class="subtitle">Technology Enthusiast & Developer</div>
+            <div class="subtitle">Tech Enthusiast| Developer| Content Strategist| MC| Organizer</div>
+        </div>
+
             <div class="contact-info">
                 <p>anjanasankar50@gmail.com </p>
                 <div class="social-links">
@@ -519,6 +521,14 @@
                 <p>Led initiatives aimed at increasing female participation in technology, including OpenMic, a structured learning program
                 that significantly improved engagement in tech events. Focused on community building, mentorship, and fostering an
                 inclusive learning environment.</p>
+            </div>
+
+            <div class="experience">
+                <div class="role">Content Head</div>
+                <div class="year">SEDS CUSAT</div>
+                <p>Planned and executed newsletters while managing content for the official social handles of IRES-SEDS CUSAT.  
+                Played a key role in the creation of the organization’s magazine, ensuring high-quality content curation  
+                and strategic communication.</p>
             </div>
         </div>
     </section>
